@@ -1,3 +1,8 @@
+2007-12-03  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/configure, win/tcl.m4 (LIBS_GUI): remove ole32.lib oleaut32.lib
+	(LIBS): add ws2_32.lib for static builds with Tcl.
+	
 2007-12-01  Joe English  <jenglish@users.sourceforge.net>
 
 	* generic/ttk/ttkTheme.h, generic/ttk/ttkThemeInt.h,
